añado etiquetas meta al index.html, corrijo bug de las imagenes en mi descripcion

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
       href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Poppins:wght@300;600&family=Righteous&display=swap"
       rel="stylesheet"
     />
+
+    <meta
+      name="description"
+      content="¡Bienvenido a mi portafolio! Soy Luis Ángel, un apasionado desarrollador web con experiencia en la creación de aplicaciones web dinámicas e interactivas. Mi enfoque se centra en utilizar tecnologías modernas para ofrecer soluciones innovadoras. A través de varios de estos proyectos, he demostrado mi habilidad para abordar desafíos. Explora mi portafolio y descubre cómo puedo contribuir a tu próximo proyecto."
+    />
+    <meta
+      name="keywords"
+      content="Desarrollador web, React, Node.js, Firebase, Aplicaciones web, Desarrollo Frontend, Desarrollo Fullstack, HTML5, CSS3, JavaScript, Responsive Design, Experiencia del Usuario, Portafolio en línea"
+    />
     <title>Jiménez</title>
   </head>
   <body>
