Añado Suspense en el layaout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="icon" type="image/svg+xml" href="/power-shell.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Preconnect a servicios que va a utliziar la página -->
+    <link rel="preconnect" href="https://geolocation.microlink.io" />
+    <link rel="preconnect" href="https://firestore.googleapis.com" />
+
     <!-- Google Fonts -->
     <!--  <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
