--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html style="scroll-snap-type: y mandatory" lang="es">
   <head>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Poppins:wght@300;600&family=Righteous&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/lemillionV.jpeg" /> -->
     <link rel="icon" type="image/svg+xml" href="/power-shell.webp" />
@@ -9,14 +16,6 @@
     <!-- Preconnect a servicios que va a utliziar la página -->
     <link rel="preconnect" href="https://geolocation.microlink.io" />
     <link rel="preconnect" href="https://firestore.googleapis.com" />
-
-    <!-- Google Fonts -->
-    <!--  <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Poppins:wght@300;600&family=Righteous&display=swap"
-      rel="stylesheet"
-    /> -->
 
     <meta
       name="description"
