--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-
       href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Poppins:wght@300;600&family=Righteous&display=swap"
       rel="stylesheet"
     />
@@ -25,6 +24,9 @@
       name="keywords"
       content="Desarrollador web, React, Node.js, Firebase, Aplicaciones web, Desarrollo Frontend, Desarrollo Fullstack, HTML5, CSS3, JavaScript, Responsive Design, Experiencia del Usuario, Portafolio en línea"
     />
+
+    <meta property="op:title" content="Portafolio de Luis Ángel Jiménez" />
+
     <title>Jiménez</title>
   </head>
   <body>
